fix spacing for search bars in contacts lists and add more todos

--- a/client/src/css/Contacts.css
+++ b/client/src/css/Contacts.css
@@ -15,7 +15,7 @@
     display: flex;
     padding: 1em 0em 0.5em;
     margin: 0em;
-    justify-content: center;
+    justify-content: space-between;
     margin-top:auto;
   }
 
@@ -31,11 +31,12 @@
       border-color: #E8E9EC;
       flex-grow: 5;
       padding: 1em 3em 1em 1em;
+      position: absolute;
+      right: 0;
   }    
 
   form.search input[type=text] {
     width: 70%;
-    padding: 0px;
     font-size: 11px;
     border: 1px solid;
     border-color: #E8E9EC;
